# tauri-test-app

./: Cargo.toml  README.md  build  build_android
.github/workflows/: build.yml
tta/: Cargo.toml
tta-app/: android_env_vars  package.json
tta-app/src/: App.vue
tta-app/src-tauri/: Cargo.toml  tauri.conf.json
tta-app/src-tauri/icons/: icon.icns
tta-app/src-tauri/src/: lib.rs  main.rs
tta-cli/: Cargo.toml
tta-cli/src/: main.rs
